<resources>
    <string name="app_name">تحدي المليون</string>
    <string name="dummy_button">زر تجريبي</string>
    <string name="dummy_content">محتوى\nتجريبي</string>
    <string name="interstitial_ad_id">ca-app-pub-2427194500639575/6453998643</string>
    <string name="txtVs">ضد</string>
    <string name="txtOpponent1">أنت</string>
    <string name="txtOpponent2">المنافس</string>
    <string name="btnNewGame">مباراة جديدة</string>
    <string name="btnHome">خروج</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="mehdi1">Mehdi</string>
    <string name="mehdi2">Mehdi</string>
    <string name="d">د</string>
    <string name="a">أ</string>
    <string name="b">ب</string>
    <string name="c">ج</string>
    <string name="_15">15</string>
    <string name="_11">11</string>
    <string name="_4">4</string>
    <string name="_1000000">$1000000</string>
    <string name="_14">14</string>
    <string name="_13">13</string>
    <string name="_500000">$500000</string>
    <string name="_32000">$32000</string>
    <string name="_7">7</string>
    <string name="_2000">$2000</string>
    <string name="_2">2</string>
    <string name="round">الجولات</string>
    <string name="_0">0</string>
    <string name="_00">0</string>
    <string name="_000">0</string>
    <string name="_00000">0</string>
    <string name="_001">0</string>
    <string name="_0000000">0</string>
    <string name="point">نقاط المباراة</string>
    <string name="pointround">نقاط الجولة</string>
    <string name="getmony">احصل على المبلغ</string>
    <string name="_0000000000">$0</string>
    <string name="bank">رصيدك</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="_100">$100</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_10">10</string>
    <string name="_4000">$4000</string>
    <string name="_30">30</string>
    <string name="_125000">$125000</string>
    <string name="_1000">$1000</string>
    <string name="_9">9</string>
    <string name="_16000">$16000</string>
    <string name="_8">8</string>
    <string name="_200">$200</string>
    <string name="_3">3</string>
    <string name="_12">12</string>
    <string name="_64000">$64000</string>
    <string name="_8000">$8000</string>
    <string name="_5">5</string>
    <string name="_500">$500</string>
    <string name="_250000">$250000</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="_300">$300</string>
    <string name="todo18">TODO</string>
    <string name="todo19">TODO</string>
    <string name="todo20">TODO</string>
    <string name="todo21">TODO</string>
    <string name="todo22">TODO22</string>
    <string name="todo23">TODO</string>
    <string name="todo24">TODO</string>
    <string name="todo25">TODO</string>
    <string name="todo26">TODO</string>
    <string name="todo27">TODO</string>
    <string name="todo28">TODO</string>
    <string name="todo30">TODO</string>
    <string name="todo31">TODO</string>
    <string name="todo32">TODO</string>
    <string name="txtLevel1">1</string>
    <string name="todo40">TODO</string>
    <string name="todo41">TODO</string>
    <string name="todo42">TODO</string>
    <string name="txtLevel2">2</string>
    <string name="todo44">TODO</string>
    <string name="todo45">TODO</string>
    <string name="todo46">TODO</string>
    <string name="btnPlay">لعبة جديدة</string>
    <string name="btnPlayOnline">أون لاين</string>
    <string name="btnPolicy">سياسة الخصوصية</string>
    <string name="level_8">المستوى 8</string>
    <string name="close">إغلاق</string>
    <string name="txtLogout">تسجيل الخروج</string>
    <string name="credits_for_application_person_graphics_and_soundtrack">حقوق استخدام رسومات الشخصية والمؤثرات الصوتية</string>
    <string name="todo50">TODO</string>
    <string name="btnExit">خروج</string>
    <string name="todo51">TODO</string>
    <string name="todo52">TODO</string>
    <string name="todo53">TODO</string>
    <string name="todo55">TODO</string>
    <string name="todo56">TODO</string>
    <string name="todo57">TODO</string>
    <string name="todo61">TODO</string>
    <string name="todo62">TODO</string>
    <string name="login">تسجيل الدخول بحساب Google</string>
    <string name="todo66">TODO</string>
    <string name="default_web_client_id" translatable="false">969520184942-gs0rd8vm4pi6h7eak86rho3oiik6j3q8.apps.googleusercontent.com</string>
    <string name="menu_share">دعوة الأصدقاء</string>
    <string name="menu_achievements">الإنجازات</string>
    <string name="menu_store">المتجر</string>
    <string name="menu_settings">الإعدادات</string>
    <string name="msg_offline_online_disabled">تم تعطيل اللعب الأون لاين في النسخة المحلية</string>
    <string name="msg_no_internet">لا يوجد اتصال بالإنترنت</string>
    <string name="dialog_exit_title">خروج</string>
    <string name="dialog_exit_message">هل تريد الخروج من اللعبة؟</string>
    <string name="dialog_new_game_title">لعبة جديدة</string>
    <string name="dialog_new_game_message">ابدأ لعبة جديدة الآن؟</string>
    <string name="currency_coins_default">القطع 0</string>
    <string name="currency_gems_default">الجواهر 0</string>
    <string name="currency_coins_value">القطع %1$d</string>
    <string name="currency_gems_value">الجواهر %1$d</string>
    <string name="player_guest">ضيف</string>
    <string name="player_level_status">المستوى %1$d • الخبرة %2$d/%3$d</string>
    <string name="share_subject">من سيربح المليون</string>
    <string name="share_chooser">شارك اللعبة وتحد أصدقاءك</string>
    <string name="daily_reward_title">المكافأة اليومية</string>
    <string name="daily_reward_message">حصلت اليوم على\nالقطع: %1$d\nالجواهر: %2$d\n\nسلسلة الأيام: %3$d</string>
    <string name="daily_reward_positive">رائع</string>
    <string name="msg_open_game_failed">تعذر فتح اللعبة الآن</string>
</resources>
