<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bg_login"
    >

    <ImageView
        android:id="@+id/imgPerson"
        android:layout_width="150dp"
        android:layout_height="310dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/person_wait"
        android:contentDescription="@string/todo61" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/todo61" />

    <RelativeLayout
        android:id="@+id/btnGoogle"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:background="#fff"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:clickable="true"
        android:focusable="true">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/google"
            android:scaleType="fitXY"
            android:contentDescription="@string/todo66" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/login"
            />

    </RelativeLayout>

</RelativeLayout>